--- a/main/templates/404.html
+++ b/main/templates/404.html
@@ -1,13 +1,71 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'css/404.css' %}">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/404.css">
+    <title>Page Not Found</title>
+    <style>
+        *
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "poppins";
+}
+
+.page_404
+{
+    padding: 40px 0;
+    background: #fff;
+    font-family: 'Poppins';
+}
+
+.page_404 img
+{
+    width: 100%;
+}
+
+.four_zero_four_bg
+{
+    background: url('https://res.cloudinary.com/docgl2qgv/image/upload/v1708680251/404_t3odkw.gif');
+    height: 400px;
+    background-position: center;
+}
+
+h1
+{
+    font-size: 80px;
+}
+
+h3
+{
+    font-size: 80px;
+}
+
+a
+{
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    background: #39ac31;
+    display: inline-block;
+}
+
+.content_box_404
+{
+    margin-top: -50px;
+}
+a:hover
+{
+    text-decoration: none;
+    color: #fff;
+}
+    </style>
 </head>
 <body>
    <section class="page_404">
@@ -15,7 +73,7 @@
            <div class="row">
                <div class="col-sm-12">
                    <div class="col-sm-10 col-sm-offset-1 text-center">
-                       <div class="four_zero_four_bg">
+                       <div class="four_zero_four_bg" style="back">
                            <h1 class="text-center">404</h1>
                        </div>
                        <div class="content_box_404">
