--- a/main/templates/features/register.html
+++ b/main/templates/features/register.html
@@ -7,26 +7,25 @@
 {% block content%}
 <div class="container d-flex justify-content-center align-items-center min-vh-100 register">
 
-    <!----------------------- Registration Container -------------------------->
-
     <div class="row border rounded-5 p-3 bg-white shadow box-area">
 
-        <!--------------------------- Left Box ----------------------------->
-
         <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box" style="background: #103cbe;">
-            <div class="featured-image mb-3">
-                <img src="{% static 'img/qr.png' %}" class="img-fluid" style="width: 250px; max-width: 100%; margin-top: 10px;" >
+
+            <div class="col-md-6 text-center mb-4">
+                <button type="button" style="margin-top:30px" class="btn btn-primary btn-round btn-block mb-3 btn-hover-primary btn-primary-custom"  onmouseover="this.style.backgroundColor='#103cbe'; this.style.borderColor='#103cbe';" this.style.color='black' onmouseout="this.style.backgroundColor='#ffc800'; this.style.borderColor='#ffc800';">Click for cricket payment</button>
+
+                {% comment %} <button type="button" class="btn btn-primary btn-round btn-block mb-3 btn-hover-primary">Link to cricket payment</button> {% endcomment %}
+
+                <button type="button" class="btn btn-outline-primary btn-round btn-block"> Click for other Sports Payment</button>
             </div>
-            <p class="text-white fs-2" style="font-family: 'Courier New', Courier, monospace; font-weight: 600;">Scan</p>
-            <small class="text-white text-wrap text-center" style="width: 17rem;font-family: 'Courier New', Courier, monospace;">for registration payment</small>
+        
+            <p class="text-white fs-2" style="font-family: 'Courier New', Courier, monospace; font-weight: 600;">GUSTO 2024</p>
+            <small class="text-white text-wrap text-center mb-4" style="width: 17rem; font-family: 'Courier New', Courier, monospace;">click the link below once you are done fill out your information here please ensure you copy your transaction ID</small>
+            
         </div>
         
-        
-
-        <!---------------------- Registration Form ---------------------------->
-    
-        <div class="col-md-6 right-box">
-            <div class="row align-items-center form-group">
+        <div class="col-md-6 right-box d-flex align-items-center">
+            <div class="row form-group">
                 <div class="header-text mb-4">
                     <h2>College Registration</h2>
                     <p>Are you ready to bring your A-game?</p>
@@ -56,8 +55,9 @@
                     </div>
                 
                     <button type="submit" class="btn btn-lg btn-primary w-100 fs-6">Submit</button>
+                </form>
             </div>
-        </div> 
+        </div>
 
     </div>
 </div>
