--- a/static/css/styles1.css
+++ b/static/css/styles1.css
@@ -11744,3 +11744,9 @@ section#contact form#contactForm :-ms-input-placeholder {
 .other-page .custom-navbar {
   background-color: black; /* Set your desired color */
 }
+
+@media (min-width: 768px) {
+  .btn-primary-custom {
+      margin-top: 20px;
+  }
+}
