--- a/main/templates/features/register.html
+++ b/main/templates/features/register.html
@@ -27,7 +27,7 @@
                     </button>
                 </a> {% endcomment %}
                 
-                <a href="https://www.google.com" target="_blank" style="text-decoration: none;">
+                <a href="https://gevents.gitam.edu/registration/NzEz" target="_blank" style="text-decoration: none;">
                     <button type="button" class="btn btn-primary btn-round btn-block mb-3 btn-hover-primary btn-primary-custom" style="margin-top:30px; background-color: #007BFF; color: #FFFFFF; border-color: #007BFF; font-size: 22px;"
                         onmouseover="this.style.backgroundColor='#fc6b03'; this.style.borderColor='#fc6b03';"
                         onmouseout="this.style.backgroundColor='#007BFF'; this.style.borderColor='#007BFF';">
@@ -35,15 +35,23 @@
                     </button>
                 </a>
             
-                <a href="google.com" target="_blank" style="text-decoration: none;">
+                <a href="https://gevents.gitam.edu/registration/NzA4/" target="_blank" style="text-decoration: none;">
                     <button type="button" class="btn btn-outline-primary btn-round btn-block" style="color:white; font-size: 18px;">
                         Click for other sports payment
                     </button>
                 </a>
             </div>
-        
+            <img src="{% static 'assets/img/about/5.png'%}" alt="GUSTO 2024" class="img-fluid custom-image" style="max-width:40%; height: auto;">
+
             <p class="text-white fs-2" style="font-family: 'Courier New', Courier, monospace; font-weight: 600;">GUSTO 2024</p>
-            <small class="text-white text-wrap text-center mb-4" style="width: 17rem; font-family: 'Courier New', Courier, monospace; font-size:16px;">Once your payment is done come back and fill out your information here please ensure you copy your transaction ID any quries reach out to gusto@gitam.edu</small>
+            <small class="text-white text-wrap text-center mb-4" style="width: 17rem; font-family: 'Courier New', Courier, monospace; font-size:16px;">
+                Once your payment is done, come back and fill out your information. Please ensure you copy your transaction ID. For any queries, reach out to 
+                <span class="contact-link"><a href="mailto:gusto@gitam.edu">gusto@gitam.edu</a></span> 
+                or call us at 
+                <span class="contact-link"><a href="tel:9652306783">9652306783</a></span>.
+            </small>
+            
+            
             
         </div>
         
