--- a/main/templates/features/coreteam.html
+++ b/main/templates/features/coreteam.html
@@ -4,7 +4,7 @@
 {% block title %}Core Team - GUSTO 2024{% endblock %}
 {% block content%}
 <section class="page-section bg-light" id="team">
-    <div class="container">
+    <div class="container" style="margin-top:120px;">
         <div class="text-center">
             <h2 class="section-heading-portfolio text-uppercase">Our Amazing Team</h2>
             <h3 class="section-subheading text-muted">The brain behind GUSTO 2024</h3>
