--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -26,6 +26,7 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'assets/vendors/vegas/vegas.min.css' %}"> -->
 		<!-- App & fonts-->
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Work+Sans:300,400,500,700">
+        <!-- Add this line in the head section of your HTML -->
 		{% comment %} <link rel="stylesheet" type="text/css" id="app-stylesheet" href="{% static 'assets/css/main.css' %}"><!--[if lt IE 9]--> {% endcomment %}
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
@@ -65,8 +66,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; GUSTO 2024</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/gusto.2024?utm_source=qr&igsh=MWlja2RiNDF3end1aQ==" aria-label="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="mailto:gusto@gitam.edu" aria-label="Mail"><i class="fas fa-envelope"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-end">
