--- a/main/templates/features/home.html
+++ b/main/templates/features/home.html
@@ -220,7 +220,7 @@
                         <br />
                         Of
                         <br />
-                        GuSTO 2024!
+                        GUSTO 2024!
                     </h4>
                 </div>
             </li>
@@ -232,7 +232,8 @@
     <div class="container">
         <div class="text-center">
             <h2 class="section-heading text-uppercase">Gallery</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">Experience the Excitement of GUSTO 2024. <span class="caption">Explore moments of joy, creativity, and community in our GUSTO 2024 gallery.</span></h3>
+
         
     </div>
     <div class="isolated-container">
@@ -297,9 +298,9 @@
             <div class="col-lg-6 col-md-12">
                 <!-- Contact Person 1 -->
                 <div class="contact-person">
-                    <h4>Thapaswi Kota</h4>
-                    <p>Staff convenor</p>
-                    <p class="contact-phone">Phone: xxx-xxx-xxxx</p>
+                    <h4>Yashwanth Reddy</h4>
+                    <p>Position: Student convenor</p>
+                    <p class="contact-phone">Phone: 6281703133</p>
                 </div>
             </div>
             <div class="col-lg-6 col-md-12">
@@ -307,7 +308,7 @@
                 <div class="contact-person">
                     <h4>Keerthi Kolla</h4>
                     <p>Position: Student convenor</p>
-                    <p class="contact-phone">Phone: xxx-xxx-xxxx</p>
+                    <p class="contact-phone">Phone: 7032168168</p>
                 </div>
             </div>
             <div class="col-lg-6 col-md-12">
@@ -315,39 +316,39 @@
                 <div class="contact-person">
                     <h4 class="contact-name">Ekechukwu David</h4>
                     <p class="contact-position">Student convenor</p>
-                    <p class="contact-phone">Phone: xxx-xxx-xxxx</p>
+                    <p class="contact-phone">Phone: 9652306783</p>
                 </div>
             </div>
             <div class="col-lg-6 col-md-12">
                 <!-- Contact 4 -->
                 <div class="contact-person">
-                    <h4 class="contact-name">Sai Manesh</h4>
-                    <p class="contact-position">Competition Coordinator</p>
-                    <p class="contact-phone">Phone: xxx-xxx-xxxx</p>
+                    <h4 class="contact-name">Puneeth Myadam</h4>
+                    <p class="contact-position">Student convenor</p>
+                    <p class="contact-phone">Phone: 7680826042</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-12">
                 <!-- Director of Sports 1 -->
                 <div class="contact-person">
-                    <h4>Director of Sports 1</h4>
-                    <p>Position: Director of Sports</p>
-                    <p class="contact-phone">Phone: xxx-xxx-xxxx</p>
+                    <h4>Dr Vijay Kumar Upadhyay</h4>
+                    <p>Chair Person</p>
+                    <p class="contact-phone">director_sports@gitam.edu</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-12">
                 <!-- Director of Sports 2 -->
                 <div class="contact-person">
-                    <h4>Director of Sports 2</h4>
-                    <p>Position: Director of Sports</p>
-                    <p class="contact-phone">Phone: xxx-xxx-xxxx</p>
+                    <h4>Dr Nrayana Rao Chowdary</h4>
+                    <p>Organizing Secretary</p>
+                    <p class="contact-phone">nmuthare@gitam.edu</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-12">
                 <!-- Director of Sports 3 -->
                 <div class="contact-person">
-                    <h4>Director of Sports 3</h4>
-                    <p>Position: Director of Sports</p>
-                    <p class="contact-phone">Phone: xxx-xxx-xxxx</p>
+                    <h4>Thapaswi Kota</h4>
+                    <p>Convener</p>
+                    <p class="contact-phone">tkota2@gitam.edu</p>
                 </div>
             </div>
             <div class="col-lg-12 col-md-12 text-center">
