complain page update

--- a/committee/templates/all_complain.html
+++ b/committee/templates/all_complain.html
@@ -68,7 +68,27 @@
             </div>
         </nav>
     </div>
+    
     <h1 class="mb-4">All Complaints</h1>
+    <div class="form-group">
+        <label for="sportFilter">Filter by Sport:</label>
+        <form method="get" action="{% url 'all_captains' %}">
+            <div class="form-row align-items-center">
+                <div class="col-lg-4 col-md-6 mb-2">
+                    <select name="sport" id="sportFilter" class="form-control">
+                        <option value="all">All Sports</option>
+                        {% for sport in all_sports %}
+                            <option value="{{ sport.name }}" {% if sport.name == selected_sport %}selected{% endif %}>{{ sport.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="col-lg-2 col-md-6 mb-2">
+                    <button type="submit" class="btn btn-primary btn-block">Filter</button>
+                </div>
+            </div>
+        </form>
+        
+    </div>
 
     {% if complaints %}
         <ul class="list-group">
