INTRO AND FOOTER UPDATE

--- a/committee/templates/all_complain.html
+++ b/committee/templates/all_complain.html
@@ -72,7 +72,7 @@
     <h1 class="mb-4">All Complaints</h1>
     <div class="form-group">
         <label for="sportFilter">Filter by Sport:</label>
-        <form method="get" action="{% url 'all_captains' %}">
+        <form method="get" action="{% url 'all_complain' %}">
             <div class="form-row align-items-center">
                 <div class="col-lg-4 col-md-6 mb-2">
                     <select name="sport" id="sportFilter" class="form-control">
