--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -71,8 +71,8 @@
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                        <a class="link-dark text-decoration-none me-3" href="{% url 'privacy_policy' %}">Privacy Policy</a>
+                        <a class="link-dark text-decoration-none" href="{% url 'termofuse' %}">Terms of Use</a>
                     </div>
                 </div>
             </div>
