--- a/main/templates/features/complain_success.html
+++ b/main/templates/features/complain_success.html
@@ -1,14 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% for message in messages %}
-    <p class="success">{{ message }}</p>
-  {% endfor %}
-  <h2>Success!</h2>
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="text-center">
+    <div class="spinner-border text-primary" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+    <h2 class="mt-3" style="color: white;">Success!</h2>
+    <p class="success mt-3">Your complaint has been logged. Redirecting to the homepage...</p>
+  </div>
+</div>
 
-  <script>
-    setTimeout(function() {
-      window.location.href = "{% url 'home' %}";  // Replace 'home' with the actual name or URL of your homepage
-    }, 3000);  // 3000 milliseconds = 3 seconds
-  </script>
+<script>
+  setTimeout(function() {
+    window.location.href = "{% url 'home' %}";
+  }, 3000);
+</script>
 {% endblock %}
