--- a/main/templates/features/complain.html
+++ b/main/templates/features/complain.html
@@ -8,7 +8,7 @@
     <div class="row form-group">
         <div class="col-md-8 offset-md-2">
             <div class="header-text mb-4 text-center">
-                <h2>Sports Fest Complaint Form</h2>
+                <h2>GUSTO 2024 Complaint Form</h2>
             </div>
             <form method="post" action="{% url 'complain' %}" enctype="multipart/form-data">
                 {% csrf_token %}
