--- a/main/templates/features/coreteam.html
+++ b/main/templates/features/coreteam.html
@@ -24,7 +24,10 @@
             {% endfor %}
         </div>
         <div class="row">
-            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">
+                Unleashing the spirit of GUSTO 2024 with a team fueled by creativity, collaboration, and an unyielding passion for sports.
+                 Join us in celebrating the heartbeat behind the event – the GUSTO 2024 Core Team.
+            </p></div>
         </div>
     </div>
 </section>
