result page added

--- a/main/templates/features/home.html
+++ b/main/templates/features/home.html
@@ -180,7 +180,7 @@
                         <h4>February 20</h4>
                         <h4 class="subheading">Registrations starts</h4>
                     </div>
-                    <div class="timeline-body"><p class="text-muted">Are you ready to be a part of the most thrilling sports fest of the year? Registration for Gusto 2024 is now officially open, and we invite you to secure your spot in this unforgettable event.</p></div>
+                    <div class="timeline-body"><p class="text-muted">Are you ready to be a part of the most thrilling sports fest of the year? Registration for GUSTO 2024 is now officially open, and we invite you to secure your spot in this unforgettable event.</p></div>
                 </div>
             </li>
             <li class="timeline-inverted">
@@ -190,7 +190,7 @@
                         <h4>March 11</h4>
                         <h4 class="subheading">Registration ends</h4>
                     </div>
-                    <div class="timeline-body"><p class="text-muted">Don't wait until the last minute! Ensure your participation in Gusto 2024 by completing your registration before the deadline on March 11th. </p></div>
+                    <div class="timeline-body"><p class="text-muted">Don't wait until the last minute! Ensure your participation in GUSTO 2024 by completing your registration before the deadline on March 11th. </p></div>
                 </div>
             </li>
             <li>
@@ -338,7 +338,7 @@
             <div class="col-lg-4 col-md-12">
                 <!-- Director of Sports 2 -->
                 <div class="contact-person">
-                    <h4>Dr Nrayana Rao Chowdary</h4>
+                    <h4>Dr Narayana Rao Chowdary</h4>
                     <p>Organizing Secretary</p>
                     <p class="contact-phone">nmuthare@gitam.edu</p>
                 </div>
