--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -48,6 +48,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'result' %}">Results</a></li>
                         <li class="nav-item"><a class="nav-link" href="{%  url 'event' %}"  style="white-space: nowrap;">Fixtures & Rules</a></li>
                         <li class="nav-item"><a class="nav-link" href="{%  url 'complain' %}">Complains</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'coreteam' %}" style="white-space: nowrap;">Core-Team</a></li>
@@ -86,7 +87,7 @@
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.logwork.com/widget/countdown.js"></script>
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        {% comment %} <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> {% endcomment %}
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
         <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
