--- a/main/templates/features/coreteam.html
+++ b/main/templates/features/coreteam.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">
                 Unleashing the spirit of GUSTO 2024 with a team fueled by creativity, collaboration, and an unyielding passion for sports.
-                 Join us in celebrating the heartbeat behind the event – the GUSTO 2024 Core Team.
+                .Join us in celebrating the heartbeat behind the event – the GUSTO 2024 Core Team.
             </p></div>
         </div>
     </div>
