core team upload link

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -67,7 +67,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; GUSTO 2024</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/gusto.2024?utm_source=qr&igsh=MWlja2RiNDF3end1aQ==" aria-label="Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/gusto.2024?utm_source=qr&igsh=MWlja2RiNDF3end1aQ==" aria-label="Instagram" target="_blank"><i class="c"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="mailto:gusto@gitam.edu" aria-label="Mail"><i class="fas fa-envelope"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
