--- a/main/templates/features/coreteam.html
+++ b/main/templates/features/coreteam.html
@@ -16,8 +16,8 @@
                         <img class="mx-auto rounded-circle" src="{{ member.image.url }}" alt="..." />
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted-not">{{ member.role }}</p>
-                        <a class="btn btn-dark btn-social mx-2" href="{{ member.twitter_profile }}" aria-label="{{ member.name }} Twitter Profile"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="{{ member.facebook_profile }}" aria-label="{{ member.name }} Facebook Profile"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="{{ member.instagram_profile }}" aria-label="{{ member.name }} Instagram Profile"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="{{ member.mail_profile }}" aria-label="{{ member.name }} Mail Profile"><i class="fas fa-envelope"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="{{ member.linkedin_profile }}" aria-label="{{ member.name }} LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
