logout view creation

--- a/main/templates/base1.html
+++ b/main/templates/base1.html
@@ -15,7 +15,8 @@
         <h1 class="display-4">GUSTO 2024 Result Update</h1>
         <nav>
             <ul>
-                <li><a href="{% url 'game_result_list' %}">Game Results</a></li>
+                <li><a class="nav-link text-black font-weight-bold" href="{% url 'game_result_list' %}">Game Results</a></li>
+                <li><a class="nav-link text-black font-weight-bold" href="{% url 'logout' %}">Logout</a></li>
                 <!-- Add other navigation links as needed -->
             </ul>
         </nav>
