--- a/main/templates/blogger/game_result_detail.html
+++ b/main/templates/blogger/game_result_detail.html
@@ -1,9 +1,33 @@
 {% extends 'base1.html' %}
 
 {% block content %}
-  <h2>Game Result Details</h2>
-  <p>Team A: {{ game_result.team_a }}</p>
-  <p>Team B: {{ game_result.team_b }}</p>
-  <!-- Add other fields as needed -->
-  <a href="{% url 'game_result_list' %}">Back to list</a>
+  <div class="container mt-4">
+    <div class="card">
+      <div class="card-body">
+        <h2 class="card-title">Game Result Details</h2>
+
+        <div class="row">
+          <div class="col-md-6">
+            <p><strong>Team A:</strong> {{ game_result.team_a }}</p>
+            <p><strong>Score A:</strong> {{ game_result.score_a }}</p>
+          </div>
+          <div class="col-md-6">
+            <p><strong>Team B:</strong> {{ game_result.team_b }}</p>
+            <p><strong>Score B:</strong> {{ game_result.score_b }}</p>
+          </div>
+        </div>
+
+        <div class="row mt-3">
+          <div class="col-md-6">
+            <p><strong>Sport:</strong> {{ game_result.sport }}</p>
+          </div>
+          <div class="col-md-6">
+            <p><strong>Result:</strong> {{ game_result.result }}</p>
+          </div>
+        </div>
+
+        <a href="{% url 'game_result_list' %}" class="btn btn-primary mt-3">Back to List</a>
+      </div>
+    </div>
+  </div>
 {% endblock %}
